--- a/composer.json
+++ b/composer.json
@@ -7,5 +7,11 @@
             "email": "654020445@qq.com"
         }
     ],
-    "require": {}
+    "require": {},
+    "autoload":{
+        "psr-4":{
+            "Moshi\\Creational\\AbstractFactory\\":"Creational/AbstractFactory",
+            "Moshi\\Creational\\FactoryMethod\\":"Creational/FactoryMethod"
+        }
+    }
 }
